--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'javax.inject:javax.inject:1'
 
 	compileOnly 'org.projectlombok:lombok'
 
